fixed footer overflow

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,5 @@
 .footer {
-    width: 100vw;
+    width: 100%;
     height: 10rem;
     background-color: #004951;
     margin-top: 5rem;
